Three images being rendered not showing correctly yet

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -75,3 +75,8 @@ body {
     border-radius: 10px;
     margin-top: 8px;
 }
+
+/* Three Images */
+.three-images-wrapper {
+	display: flex;
+}
